Wrap with double quotes otherwise test fails
Signed-off-by: cmoulliard <cmoulliard@redhat.com>